# SysML_Python_Visualizer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  import_test.sysml  working_vehicle.sysml
src/: __init__.py  cli.py  kernel_api.py  kernel_integration.py  standalone.py  sysmlbw.skin  utils.py
src/sysml_v2_visualizer/: __init__.py  cli.py  kernel_api.py  utils.py
