[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysml-v2-visualizer"
version = "1.0.0"
description = "SysML v2 model visualization tool with auto-discovery - visualize elements without specifying files"
authors = [
    {name = "SysML v2 Visualization Project"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["sysml", "visualization", "systems modeling", "plantuml", "svg", "jupyter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]
requires-python = ">=3.8"
dependencies = [
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0"
]

[project.optional-dependencies]
kernel = ["jupyter-client", "ipykernel"]
dev = ["pytest", "black", "flake8", "mypy"]

[project.scripts]
sysml-visualize = "sysml_v2_visualizer.cli:main"

[project.urls]
Homepage = "https://github.com/redasasin4/SysML_Python_Visualizer"
"Bug Reports" = "https://github.com/redasasin4/SysML_Python_Visualizer/issues"
Source = "https://github.com/redasasin4/SysML_Python_Visualizer"
Documentation = "https://github.com/redasasin4/SysML_Python_Visualizer/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.skin"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900"
]